fix popover behind the board and start redesigning the radio buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -25,10 +25,15 @@ body {
   margin-bottom: 16px;
 }
 
+input[type=radio] {
+  display: none;
+}
+
 .popover {
   visibility: hidden;
 
   position: absolute;
+  z-index: 1;
   background-color: white;
   padding: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
